# c-template

./: .gitignore  CMakeLists.txt  main.c
.github/workflows/: cmake-build-test.yml  cmake-run-main.yml
include/: another_library.h  debug_print.h  errors.h  sample_library.h
src/: another_library.c  errors.c  sample_library.c
tests/: test_another_library.c  test_sample_library.c
